# UngDungHoTroNguoiKhiemThi

./: .gitattributes  .gitignore  AGENTS.md  README.md  firebase.json  pubspec.yaml
android/app/: build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  fasttext_wrapper.cpp  image_optimizer.cpp
android/app/src/main/cpp/opencv/include/opencv2/: calib3d.hpp  photo.hpp  videoio.hpp
android/app/src/main/cpp/opencv/include/opencv2/dnn/: all_layers.hpp
android/app/src/main/cpp/opencv/include/opencv2/gapi/: media.hpp  rmat.hpp
android/app/src/main/cpp/opencv/include/opencv2/gapi/own/: mat.hpp
android/app/src/main/cpp/opencv/include/opencv2/videoio/legacy/: constants_c.h
assets/: labels.txt
assets/models/: cls.opt  det.opt  dict.txt
data/: (kèm theo) Công bố DS thuốc nhập khẩu từ 01_01_23 đến nay.xlsx  craw_table_in_pdf.py  domain_keywords.csv  domain_terms.txt  handing_input_data_domain_key_word.py  pare_data_domain_key_word.py  symspell_hacker.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/config/: ai_engine_strategy.dart  base_model.dart  base_view.dart  extension.dart  image_worker_request.dart  my_colors.dart  open_cv.dart  process_case_result.dart  process_format_input_image_result.dart  process_image_result.dart
lib/constant/: blur_score.dart  color.dart
lib/engine/: handle_image_worker_service.dart  image_pipeline.dart  os_local_ai_engine.dart
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+280 files in other folders)
